--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,6 @@ exclude = ["/.github/"]
 [dependencies]
 anyhow = "1.0.97"
 clap = { version = "4.5.31", features = ["derive"] }
+reqwest = "0.12.24"
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 yahoo_finance_api = "3.0.0"
